Fix broken styles

--- a/app/assets/stylesheets/sections/articles.scss
+++ b/app/assets/stylesheets/sections/articles.scss
@@ -29,7 +29,8 @@
 .article-kudos{
   background-color: black;
   color: white;
-  width: 15%;
+  width: 17%;
+  text-indent: 0;
   a{
     color: #01d277;
   }
